--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+# Put the docker-compose.yml file out in the parent directory where both the frontend and backend folders are present and then the project will run fine
 # version: '3.8'
 
 services:
